--- a/My Portfolio/css/main.css
+++ b/My Portfolio/css/main.css
@@ -988,6 +988,13 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .grey-section p.lead {
 	color: #7d7d7d;
 }
+#particles-js {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
 .section-intro {
 	max-width: 700px;
 	margin-left: auto;
@@ -1257,7 +1264,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-	background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+	/* background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom; */
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
